<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Login"
        style="@style/LoginStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_paddingS"
        android:layout_marginEnd="@dimen/login_paddingS"
        android:text="@string/login_page"
        android:textColor="#4e4e4e"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/login_paddingS"
        android:layout_marginTop="@dimen/email_margin"
        android:layout_marginEnd="@dimen/login_paddingS"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <EditText

        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/login_paddingS"
        android:layout_marginTop="@dimen/password_margin"
        android:layout_marginEnd="@dimen/login_paddingS"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/login_paddingS"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginEnd="@dimen/login_paddingS"
        android:text="@string/login_button" />

</LinearLayout>